/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.9/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the groovy plugin to also add support for Groovy (needed for Spock)
    id 'groovy'

    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    id "com.github.johnrengelman.shadow" version "8.1.1"
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use the latest Groovy version for Spock testing
    testImplementation libs.groovy

    // Use the awesome Spock testing and specification framework even with Java
    testImplementation libs.spock.core
    testImplementation libs.junit

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // This dependency is used by the application.
    implementation libs.guava
    implementation libs.byte.buddy
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}

version = rootProject.file('VERSION').text.trim()

application {
    // Define the main class for the application.
    mainClass = 'org.example.App'
}

shadowJar {
    archiveBaseName.set(rootProject.name)
    archiveVersion.set(project.version)  // Include the project version
    archiveExtension.set('jar')
    archiveClassifier.set('')
    
    manifest {
        attributes(
                'Premain-Class': 'io.seqera.debug.UnsafeTracerAgent',
                'Implementation-Title': 'Unsafe Tracer Agent',
                'Implementation-Version': project.version,
                'Can-Retransform-Classes': 'true'
        )
    }
}
